--- a/index.html
+++ b/index.html
@@ -33,30 +33,15 @@
 
     <font style="font-weight: bold;" size="+1">
       Lecturer and Researcher</font>  
-  <!--  <br> ISEN Brest 
-    <br>
-    <br><a href="http://www.isen.fr" style="text-decoration: none;"><img src="img/isen_logo.png" HEIGHT=80></a>
-    <br>
-    <br>
--->
 
 <br>
     <p align="justify"><b>Address</b>
     <br>e-mail: <i>jeremy rouot</i> at <i>tutanota com</i> (replace each of the two blank spaces in italic style with one dot)</a>
-   <!-- <br> ISEN CAMPUS DE BREST
-    <br> 20 Rue Cuirassé Bretagne, 
-    <br> 29200 Brest
--->
 
 <br>
 <br>
 <br>
 <br>
-<!--
-    <br>
-    <p align="justify"><b>CV</b> <a href="file/cv.pdf" style="text-decoration: none;"><br>[pdf]</a> 
-    <br>
--->
 
     <p align="justify"><b>Research Interests</b>
     <br>
@@ -75,54 +60,29 @@
     <p>
 
 
-    <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://haltools.archives-ouvertes.fr/Public/afficheRequetePubli.php?idHal=jrouot&CB_auteur=oui&CB_titre=oui&CB_article=oui&langue=Anglais&tri_exp=typdoc&tri_exp2=date_publi&ordre_aff=TA&Fen=Aff&css=../css/styles_publicationsHAL.css" style="text-decoration: underline;"><b>Publications</b></a>
+    <br><a href="http://haltools.archives-ouvertes.fr/Public/afficheRequetePubli.php?idHal=jrouot&CB_auteur=oui&CB_titre=oui&CB_article=oui&langue=Anglais&tri_exp=typdoc&tri_exp2=date_publi&ordre_aff=TA&Fen=Aff&css=../css/styles_publicationsHAL.css" style="text-decoration: underline;"><b>Publications</b></a>
 
       <br>
       <br><b>Miscellaneous</b>
       <ul>
-
         <li>
-          <i>
-	Optimization of chemical batch reactors using temperature control.
-          </i>
-          <br>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Slides on the control of chemical reactions. 
+          Slides on the local time minimal synthesis for chemical reactions. 
           <a href="file/planches-reactions.pdf"style="text-decoration: none;">[pdf]</a>
-          </br>
         </li>
 
         <li>
-          <i>
-            Geometric and numerical methods in optimal
-            control for the time minimal saturation in
-            Magnetic Resonance Imaging.
-          </i>
-          <br>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Slides on the control of two spins in MRI. 
+          Slides on the control of two spins in MRI. 
           <a href="file/planches-mri.pdf"style="text-decoration: none;">[pdf]</a>
-          </br>
         </li>
 
         <li>
-          <i>
-            Sub-Riemannian geometry, 
-            Hamiltonian dynamics,
-            micro-swimmers, Copepod nauplii and Copepod robot.
-          </i>
-          <br>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Slides on the Copepod swimmer. 
+          Slides on the swimming problem at low Reynolds. 
           <a href="file/planches-copepod.pdf"style="text-decoration: none;">[pdf]</a>
-          </br>
         </li>
 
         <li>
-          <i>
-            Averaging for minimum time control problems and applications.
-          </i>  
-          <br>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Slides on the low thrust control in spatial mechanics. 
+          Slides on the low thrust orbital transfer in spatial mechanics. 
           <a href="file/planches-j2-finsler.pdf"style="text-decoration: none;">[pdf]</a>
-          </br>
         </li>
 
         <li>
@@ -132,17 +92,13 @@
 
 
         <li>
-          <i>
-            Optimal Transportation : Applications to Image processing.
-          </i>
-          <br>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Memoir, 2012,
+          Memoir, 2012,
           <i>Advisors:</i> Emmanuel Maitre and &Eacutedouard Oudet. <a href="file/rapport2A.pdf"style="text-decoration: none;">[pdf]</a> 
         </li>
       </ul>
 
       <p align="justify"><b>Education</b>
-      <br>PhD in Applied Mathematics (<a href="http://unice.fr/" style="text-decoration: none;">Univ. de Nice Sophia Antipolis</a>, 2016)
+      <br>PhD in Applied Mathematics (<a href="http://unice.fr/" style="text-decoration: none;">Univ. Côte d'Azur</a>, 2016)
       <br>Ing&eacutenieur in Applied Mathematics / Computer Science
       (<a href="http://ensimag.grenoble-inp.fr/" style="text-decoration: none;">Grenoble INP - ENSIMAG</a>, 2013)
     <br>
