--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
       <br><b>Miscellaneous</b>
       <ul>
         <li>
+          Slides on the optimization of muscular stimulations. 
+          <a href="file/planches-muscle.pdf"style="text-decoration: none;">[pdf]</a>
+        </li>
+        <li>
           Slides on the local time minimal synthesis for chemical reactions. 
           <a href="file/planches-reactions.pdf"style="text-decoration: none;">[pdf]</a>
         </li>
