--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114997045-1"></script>
     <script>
   window.dataLayer = window.dataLayer || [];
@@ -12,7 +13,6 @@
     <meta name="author" content="J&eacuter&eacutemy Rouot">
     <meta name="description" content="Homepage of Jeremy Rouot" />
     <meta name="Keywords" content="Jeremy Rouot homepage">
-    <meta http-equiv="Pragma" content="no-cache">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="gNSE4DKNkeQ1woWLtRcwORzo9NgAEjgFPnYRQaU1zLY" />
     <title>Homepage of Jeremy Rouot</title>
@@ -20,7 +20,6 @@
 
 
   <body style="color: rgb(0, 0, 0); background-color:#D5DBDC;" font="26px Arial" link="#8585ad" vlink="#4d0099" >
-    
     <font size="+1">
     <br>
     <font size="+3">
@@ -39,8 +38,8 @@
     <br>e-mail: <i>jeremy rouot</i> at <i>tutanota com</i> (replace each of the two blank spaces in italic style with one dot)</a>
 
 <br>
-<br>
-<br>
+    <p align="justify"><b>CV</b> <a href="file/dossier_rouot.pdf" style="text-decoration: none;"><br>[pdf]</a>
+    <br>
 <br>
 
     <p align="justify"><b>Research Interests</b>
@@ -48,8 +47,9 @@
     Geometric control theory, Optimization and optimal control, Numerical methods, Data Science. 
     <br><i>Applications:</i>
     Swimming at low Reynolds number, Nuclear magnetic resonance, 
-    Orbital transfer with low thrust, Inverse optimal control in Robotics,
-    Data Science in environment.<br>
+    Orbital transfer with low thrust, Inverse optimal control in Robotics, Biomechanics,
+    Chemical reactors
+    <br>
     <p>
     Associate member of the following research team and projects 
     <ul style="list-style-type:circle">
@@ -58,7 +58,6 @@
       </li>
     </ul>
     <p>
-
 
     <br><a href="http://haltools.archives-ouvertes.fr/Public/afficheRequetePubli.php?idHal=jrouot&CB_auteur=oui&CB_titre=oui&CB_article=oui&langue=Anglais&tri_exp=typdoc&tri_exp2=date_publi&ordre_aff=TA&Fen=Aff&css=../css/styles_publicationsHAL.css" style="text-decoration: underline;"><b>Publications</b></a>
 
@@ -93,6 +92,7 @@
           PhD Thesis, 2016,
           <i>Advisors:</i> Bernard Bonnard and Jean-Baptiste Pomet. <a href="file/thesis-rouot.pdf"style="text-decoration: none;">[pdf]</a> <a href="https://tel.archives-ouvertes.fr/tel-01472370v2"style="text-decoration: none;">[link]</a> 
         </li>
+      </ul>
 
       <p align="justify"><b>Education</b>
       <br>PhD in Applied Mathematics (<a href="http://unice.fr/" style="text-decoration: none;">Univ. Côte d'Azur</a>, 2016)
