--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
     Associate member of the following research team and projects 
     <ul style="list-style-type:circle">
       <li>
-        INRIA <a href="http://team.inria.fr/mctao/" style="text-decoration: none;">McTAO</a> Team
+        INRIA <a href="https://team.inria.fr/mctao/" style="text-decoration: none;">McTAO</a> Team
+      </li>
+      <li>
+        Institut de Mathématiques de Bourgogne <a href="https://math.u-bourgogne.fr/" style="text-decoration: none;">IMB</a>
       </li>
     </ul>
     <p>
