--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
     <p>
 
     <br><a href="http://haltools.archives-ouvertes.fr/Public/afficheRequetePubli.php?idHal=jrouot&CB_auteur=oui&CB_titre=oui&CB_article=oui&langue=Anglais&tri_exp=typdoc&tri_exp2=date_publi&ordre_aff=TA&Fen=Aff&css=../css/styles_publicationsHAL.css" style="text-decoration: underline;"><b>Publications</b></a>
-
+    <br>
+    If the above "haltools" link is dead, browse the preprints here:<a href="https://jeremyrouot.github.io/homepage/preprints"><b>Preprints</b></a>
       <br>
       <br><b>Miscellaneous</b>
       <ul>
