--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114997045-1"></script>
     <script>
-  window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-        gtag('config', 'UA-114997045-1');
+      gtag('config', 'UA-114997045-1');
     </script>
     <meta name="author" content="J&eacuter&eacutemy Rouot">
     <meta name="description" content="Homepage of Jeremy Rouot" />
@@ -21,26 +21,26 @@
 
   <body style="color: rgb(0, 0, 0); background-color:#D5DBDC;" font="26px Arial" link="#8585ad" vlink="#4d0099" >
     <font size="+1">
+      <br>
+      <font size="+3">
+        J&eacuter&eacutemy Rouot</font> 
+
+      <img style="height: 213px; float: left;" alt="" src="img/jr.png" hspace="50">
+      <br>
+
+      <br>
+
+      <font style="font-weight: bold;" size="+1">
+        Lecturer and Researcher</font>  
+
+      <br>
+      <p align="justify"><b>Address</b>
+      <br>e-mail: <i>jeremy rouot</i> at <i>tutanota com</i> (replace each of the two blank spaces in italic style with one dot)</a>
+
     <br>
-    <font size="+3">
-      J&eacuter&eacutemy Rouot</font> 
-
-    <img style="height: 213px; float: left;" alt="" src="img/jr.png" hspace="50">
-    <br>
-
-    <br>
-
-    <font style="font-weight: bold;" size="+1">
-      Lecturer and Researcher</font>  
-
-<br>
-    <p align="justify"><b>Address</b>
-    <br>e-mail: <i>jeremy rouot</i> at <i>tutanota com</i> (replace each of the two blank spaces in italic style with one dot)</a>
-
-<br>
     <p align="justify"><b>CV</b> <a href="file/dossier_rouot.pdf" style="text-decoration: none;"><br>[pdf]</a>
     <br>
-<br>
+    <br>
 
     <p align="justify"><b>Research Interests</b>
     <br>
@@ -62,10 +62,21 @@
     </ul>
     <p>
 
-   <br><a href="http://haltools.archives-ouvertes.fr/Public/afficheRequetePubli.php?idHal=jrouot&CB_auteur=oui&CB_titre=oui&CB_article=oui&langue=Anglais&tri_exp=typdoc&tri_exp2=date_publi&ordre_aff=TA&Fen=Aff&css=../css/styles_publicationsHAL.css" style="text-decoration: underline;"><b>Publications</b></a>
-    <br>
-   <!--  <a
-     href="https://jeremyrouot.github.io/homepage/preprints"><b>Publications</b></a>-->
+    <br><a href="http://haltools.archives-ouvertes.fr/Public/afficheRequetePubli.php?idHal=jrouot&CB_auteur=oui&CB_titre=oui&CB_article=oui&langue=Anglais&tri_exp=typdoc&tri_exp2=date_publi&ordre_aff=TA&Fen=Aff&css=../css/styles_publicationsHAL.css" style="text-decoration: underline;"><b>Publications</b></a>
+    <br><br>
+
+    <b>In preparation</b>
+    <ul style="list-style-type:circle">
+      <li> 
+        Bound estimation for global optimality of a control trajectory using semi-definite programming.
+      </li>
+      <li>
+        Projective discrimination to compute nearest neighbor in a metric space (with O. Assainova).
+      </li>
+      <li>Geometric approach to compute metrics on covariance operators using optimal transportation and application to speech detection (with M. Saumard and M. Sayari).
+      </li>
+      <!--  <a
+        href="https://jeremyrouot.github.io/homepage/preprints"><b>Publications</b></a>-->
       <br>
       <br><b>Miscellaneous</b>
       <ul>
@@ -103,7 +114,7 @@
       <br>PhD in Applied Mathematics (<a href="http://unice.fr/" style="text-decoration: none;">Univ. Côte d'Azur</a>, 2016)
       <br>Ing&eacutenieur in Applied Mathematics / Computer Science
       (<a href="http://ensimag.grenoble-inp.fr/" style="text-decoration: none;">Grenoble INP - ENSIMAG</a>, 2013)
-    <br>
+      <br>
 
   </body>
 </html>
