--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
       <p align="justify"><b>Address</b>
       <br>e-mail: <i>jeremy rouot</i> at <i>tutanota com</i> (replace each of the two blank spaces in italic style with one dot)</a>
 
+      <!--
     <br>
     <p align="justify"><b>CV</b> <a href="file/dossier_rouot.pdf" style="text-decoration: none;"><br>[pdf]</a>
     <br>
     <br>
+    -->
 
     <p align="justify"><b>Research Interests</b>
     <br>
@@ -58,6 +60,9 @@
       </li>
       <li>
         Institut de Mathématiques de Bourgogne <a href="https://math.u-bourgogne.fr/" style="text-decoration: none;">IMB</a>
+      </li>
+    <li>
+        Laboratoire de Mathématiques de Bretagne Atlantique <a href="http://www.lmba-math.fr/laboratoire.html" style="text-decoration: none;">LMBA</a>
       </li>
     </ul>
     <p>
@@ -82,7 +87,6 @@
     </ul>
     <!--  <a
       href="https://jeremyrouot.github.io/homepage/preprints"><b>Publications</b></a>-->
-    <br>
     <br><b>Miscellaneous</b>
     <ul>
       <li>
