--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <p>
     
     <a href="https://www.aimsciences.org/book/AM/volume/Volume%2011?fbclid=IwAR1jxBSsLN0Q0Rw-aSy8-eRMExCL_iiMOx6fawEjWHn450ObUxJ72QrSa8A">
-    <img src="file/image.jpg" alt="Nouveau Livre !"/>
+    <img src="file/couv.jpg" alt="Jakob's book !"/>
     </a>
 
     <br><a href="http://haltools.archives-ouvertes.fr/Public/afficheRequetePubli.php?idHal=jrouot&CB_auteur=oui&CB_titre=oui&CB_article=oui&langue=Anglais&tri_exp=typdoc&tri_exp2=date_publi&ordre_aff=TA&Fen=Aff&css=../css/styles_publicationsHAL.css" style="text-decoration: underline;"><b>Publications</b></a>
