--- a/index.html
+++ b/index.html
@@ -60,32 +60,24 @@
       <li>
         Institut de Mathématiques de Bourgogne <a href="https://math.u-bourgogne.fr/" style="text-decoration: none;">IMB</a>
       </li>
-    <li>
+      <li>
         Laboratoire de Mathématiques de Bretagne Atlantique <a href="http://www.lmba-math.fr/laboratoire.html" style="text-decoration: none;">LMBA</a>
       </li>
     </ul>
     <p>
-    
+
+    <a href="https://indico.math.cnrs.fr/e/sampled-data-controls-days">
+      <img src="file/lamaneur.jpg" alt="Sampled-data control in Brest"/>
+    </a>
     <a href="https://www.aimsciences.org/book/AM/volume/Volume%2011?fbclid=IwAR1jxBSsLN0Q0Rw-aSy8-eRMExCL_iiMOx6fawEjWHn450ObUxJ72QrSa8A">
-    <img src="file/couv.jpg" alt="Jakob's book !"/>
+      <img src="file/couv.jpg" alt="Jakob's book !"/>
     </a>
 
-    <br><a href="http://haltools.archives-ouvertes.fr/Public/afficheRequetePubli.php?idHal=jrouot&CB_auteur=oui&CB_titre=oui&CB_article=oui&langue=Anglais&tri_exp=typdoc&tri_exp2=date_publi&ordre_aff=TA&Fen=Aff&css=../css/styles_publicationsHAL.css" style="text-decoration: underline;"><b>Publications</b></a>
-    <br><br>
+    
 
-    <b>In preparation</b>
-    <ul style="list-style-type:circle">
-      <li> 
-        Bound estimation for global optimality of a control trajectory using semi-definite programming.
-      </li>
-      <li>
-        Projective discrimination to compute nearest neighbor in a metric space (with O. Assainova).
-      </li>
-      <li>Geometric approach to compute metrics on covariance operators using optimal transportation and application to speech detection (with M. Saumard and M. Sayari).
-      </li>
-    </ul>
-    <!--  <a
-      href="https://jeremyrouot.github.io/homepage/preprints"><b>Publications</b></a>-->
+    <br><a href="http://haltools.archives-ouvertes.fr/Public/afficheRequetePubli.php?idHal=jrouot&CB_auteur=oui&CB_titre=oui&CB_article=oui&langue=Anglais&tri_exp=typdoc&tri_exp2=date_publi&ordre_aff=TA&Fen=Aff&css=../css/styles_publicationsHAL.css" style="text-decoration: underline;"><b>Publications</b></a>
+    <br>
+
     <br><b>Miscellaneous</b>
     <ul>
       <li>
