--- a/index.html
+++ b/index.html
@@ -16,8 +16,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="gNSE4DKNkeQ1woWLtRcwORzo9NgAEjgFPnYRQaU1zLY" />
     <title>Homepage of Jeremy Rouot</title>
+    <style>
+      .container {
+        display: flex;
+        align-items: center;
+        justify-content: center
+      }
+      img {
+        max-width: 100%
+      }
+      .image {
+        flex-basis: 40%
+      }
+      .text {
+        font-size: 20px;
+        padding-left: 20px;
+      }
+    </style>
   </head>
-
 
   <body style="color: rgb(0, 0, 0); background-color:#D5DBDC;" font="26px Arial" link="#8585ad" vlink="#4d0099" >
     <font size="+1">
@@ -43,14 +59,9 @@
     <br>
     <br>
 
-    <p align="justify"><b>Research Interests</b>
-    <br>
-    Geometric control theory, Optimization and optimal control, Numerical methods, Data Science. 
-    <br><i>Applications:</i>
-    Swimming at low Reynolds number, Nuclear magnetic resonance, 
-    Orbital transfer with low thrust, Inverse optimal control in Robotics, Biomechanics,
-    Chemical reactors
-    <br>
+    <p align="justify"><h3>Research Interests</h3>
+    Geometric control theory, Optimization and optimal control, Numerical methods. 
+
     <p>
     Associate member of the following research team and projects 
     <ul style="list-style-type:circle">
@@ -66,18 +77,24 @@
     </ul>
     <p>
 
-    <a href="https://indico.math.cnrs.fr/e/sampled-data-controls-days">
-      <img height=400 src="file/bloas.jpg" alt="Sampled-data control in Brest"/>
-    </a>
-    @Paul Bloas
+      <div class="container">
+        <div class="image">
+          <a href="https://indico.math.cnrs.fr/e/sampled-data-controls-days">
+          <img height=400 src="file/bloas.jpg" alt="Sampled-data control in Brest"/>
+          </a><p>@Paul Bloas</p>
+        </div>
+        <div class="text">
+          <p><b>Journées de Contrôle Optimal Digital et ses Applications</b>, 8-10 Sep 2021, Brest</p>
+        </div>
+      </div>
+    <br>
     <a href="https://www.aimsciences.org/book/AM/volume/Volume%2011?fbclid=IwAR1jxBSsLN0Q0Rw-aSy8-eRMExCL_iiMOx6fawEjWHn450ObUxJ72QrSa8A">
       <img src="file/couv.jpg" alt="Jakob's book !"/>
     </a><br>
 
-    <br><a href="http://haltools.archives-ouvertes.fr/Public/afficheRequetePubli.php?idHal=jrouot&CB_auteur=oui&CB_titre=oui&CB_article=oui&langue=Anglais&tri_exp=typdoc&tri_exp2=date_publi&ordre_aff=TA&Fen=Aff&css=../css/styles_publicationsHAL.css" style="text-decoration: underline;"><b>Publications</b></a>
-    <br>
+    <a href="http://haltools.archives-ouvertes.fr/Public/afficheRequetePubli.php?idHal=jrouot&CB_auteur=oui&CB_titre=oui&CB_article=oui&langue=Anglais&tri_exp=typdoc&tri_exp2=date_publi&ordre_aff=TA&Fen=Aff&css=../css/styles_publicationsHAL.css" style="text-decoration: underline;"><h3>Publications</h3></a>
 
-    <br><b>Miscellaneous</b>
+    <h3>Miscellaneous</h3>
     <ul>
       <li>
         Slides on the optimization of muscular stimulations. 
@@ -109,8 +126,8 @@
       </li>
     </ul>
 
-    <p align="justify"><b>Education</b>
-    <br>PhD in Applied Mathematics (<a href="https://univ-cotedazur.eu/" style="text-decoration: none;">Univ. Côte d'Azur</a>, 2016)
+    <h3>Education</h3>
+    PhD in Applied Mathematics (<a href="https://univ-cotedazur.eu/" style="text-decoration: none;">Univ. Côte d'Azur</a>, 2016)
     <br>Ing&eacutenieur in Applied Mathematics / Computer Science
     (<a href="http://ensimag.grenoble-inp.fr/" style="text-decoration: none;">Grenoble INP - ENSIMAG</a>, 2013)
     <br>
